fixed horizontal scrolling bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,6 @@
 }
 
 html {
-  width: 100vw;
-  height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
